Linux-based benchmark with jmh perfasm